# Ds4Cpp

./: CMakeLists.txt  NOTICE  README.md  modules.lst
DSBridge/: CMakeLists.txt
DSBridge/include/: ComponentProvider.h
DSBridge/src/: ComponentDescriptorBridgeModule.cpp
DSBridge/src/components/: ComponentDescriptorBridge.cpp  ComponentDescriptorBridge_wrapper.cpp
DSCore/: CMakeLists.txt
DSCore/include/: Component.h  ComponentDescriptor.h  ComponentFactoryImpl.h  ComponentHandle.h  ComponentInstance.h  ComponentLoadingUtils.h  ComponentManager.h  ComponentManagerImpl.h  ComponentReference.h  ModuleUtils.h  ServiceUtils.h
DSCore/services/: ComponentFactory.h
DSCore/services/ds4cpp/: ComponentFactory.hpp  ComponentManager.hpp
DSCore/src/: Component.cpp  ComponentDescriptor.cpp  ComponentFactoryImpl.cpp  ComponentHandle.cpp  ComponentInstance.cpp  ComponentLoadingUtils.cpp  ComponentManagerImpl.cpp  ComponentManagerImpl.h  ComponentReference.cpp  DS4CPPModule.cpp
DSDemo/: CMakeLists.txt
DSDemo/components/: DSDemo.cpp
DSDemo/components/greetdemo.ConsoleGreeter/src/: ConsoleGreeter.cpp
DSDemo/components/greetdemo.ConsoleGreeter/src-gen/: ConsoleGreeter_wrapper.cpp
DSDemo/components/greetdemo.EnglishGreetProvider/include/: EnglishGreetProvider.hpp
DSDemo/components/greetdemo.EnglishGreetProvider/src/: EnglishGreetProvider.cpp
DSDemo/components/greetdemo.EnglishGreetProvider/src-gen/: EnglishGreetProvider_wrapper.cpp
DSDemo/components/greetdemo.FrenchGreetProvider/include/: FrenchGreetProvider.hpp
DSDemo/components/greetdemo.FrenchGreetProvider/src/: FrenchGreetProvider.cpp
DSDemo/components/greetdemo.FrenchGreetProvider/src-gen/: FrenchGreetProvider_wrapper.cpp
DSDemo/components/greetdemo.GreetManagerImpl/include/: GreetManagerImpl.hpp
DSDemo/components/greetdemo.GreetManagerImpl/src/: GreetManagerImpl.cpp
DSDemo/components/greetdemo.GreetManagerImpl/src-gen/: GreetManagerImpl_wrapper.cpp
DSDemo/model/: greetdemo.ConsoleGreeter.mcd  greetdemo.EnglishGreetProvider.mcd  greetdemo.FrenchGreetProvider.mcd  module.mcd
DSDemo/services/greetdemo/: GreetManager.hpp
DSFactoryDemo/: CMakeLists.txt
DSFactoryDemo/components/: DSDemo.cpp  DSFactoryDemo.cpp
DSFactoryDemo/components/greetdemo.ConsoleGreeter/include/: ConsoleGreeter.hpp
DSFactoryDemo/components/greetdemo.ConsoleGreeter/src/: ConsoleGreeter.cpp
DSFactoryDemo/components/greetdemo.ConsoleGreeter/src-gen/: ConsoleGreeter_wrapper.cpp
DSFactoryDemo/components/greetdemo.GenericGreetProvider/include/: GenericGreetProvider.hpp
DSFactoryDemo/components/greetdemo.GenericGreetProvider/src/: GenericGreetProvider.cpp
DSFactoryDemo/components/greetdemo.GenericGreetProvider/src-gen/: GenericGreetProvider_wrapper.cpp
DSFactoryDemo/components/greetdemo.GreetManagerImpl/include/: GreetManagerImpl.hpp
DSFactoryDemo/components/greetdemo.GreetManagerImpl/src/: GreetManagerImpl.cpp
DSFactoryDemo/components/greetdemo.GreetManagerImpl/src-gen/: GreetManagerImpl_wrapper.cpp
DSFactoryDemo/model/: greetdemo.GenericGreetProvider.mcd  greetdemo.GreetManagerImpl.mcd  module.mcd
DSFactoryDemo/services/greetdemo/: GreetManager.hpp  GreetProvider.hpp
DSLauncher/: CMakeLists.txt
DSLauncher/src/: Launcher.cpp  ModuleLoader.cpp
